show-files-btn text wrap bug fixed

--- a/client/src/common.blocks/ShowFilesButton/ShowFilesButton.css
+++ b/client/src/common.blocks/ShowFilesButton/ShowFilesButton.css
@@ -22,4 +22,6 @@
 
 .ShowFilesButton .Text {
 	margin-left: 6px;
+
+	white-space: nowrap;
 }
